Changed font in mintty.

--- a/.minttyrc
+++ b/.minttyrc
@@ -12,5 +12,5 @@ CursorBlinks=no
 FontSmoothing=default
 BoldAsColour=yes
 FontHeight=10
-Font=Source Code Pro
+Font=Source Code Pro for Powerline
 CopyAsRTF=no
