Added stylus vim bundle.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".vim/bundle/powerline"]
 	path = .vim/bundle/powerline
 	url = http://github.com/Lokaltog/vim-powerline.git
+[submodule ".vim/bundle/stylus"]
+	path = .vim/bundle/stylus
+	url = http://github.com/wavded/vim-stylus.git
