--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/stylus"]
 	path = .vim/bundle/stylus
 	url = http://github.com/wavded/vim-stylus.git
+[submodule ".vim/bundle/unimpaired"]
+	path = .vim/bundle/unimpaired
+	url = http://github.com/tpope/vim-unimpaired.git
