--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/bundle/unimpaired"]
 	path = .vim/bundle/unimpaired
 	url = http://github.com/tpope/vim-unimpaired.git
+[submodule ".vim/bundle/sensible"]
+	path = .vim/bundle/sensible
+	url = http://github.com/tpope/vim-sensible.git
