--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule ".vim/bundle/mustache"]
 	path = .vim/bundle/mustache
 	url = http://github.com/juvenn/mustache.vim.git
+[submodule ".vim/bundle/flavored-markdown"]
+	path = .vim/bundle/flavored-markdown
+	url = http://github.com/jtratner/vim-flavored-markdown.git
+[submodule ".vim/bundle/markdown"]
+	path = .vim/bundle/markdown
+	url = http://github.com/tpope/vim-markdown.git
