Added new powerline project

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = http://github.com/godlygeek/tabular.git
 [submodule ".vim/bundle/powerline"]
 	path = .vim/bundle/powerline
-	url = http://github.com/Lokaltog/vim-powerline.git
+	url = http://github.com/Lokaltog/powerline.git
 [submodule ".vim/bundle/stylus"]
 	path = .vim/bundle/stylus
 	url = http://github.com/wavded/vim-stylus.git
