--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule ".vim/bundle/delimitMate"]
 	path = .vim/bundle/delimitMate
 	url = http://github.com/Raimondi/delimitMate.git
+[submodule ".vim/bundle/repeat"]
+	path = .vim/bundle/repeat
+	url = http://github.com/tpope/vim-repeat.git
