--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ set -g prefix C-q
 # C-a C-a swaps to last used window
 bind-key C-q last-window
 
+# Faster command sequences (fixes VIM esc)
+set -s escape-time 0
+
 # Vim style
 setw -g mode-keys vi
 bind h select-pane -L
