--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 unbind C-b
 set -g prefix C-q
 
-# C-a C-a swaps to last used window
+# C-q C-q swaps to last used window
 bind-key C-q last-window
 
 # Faster command sequences (fixes VIM esc)
@@ -42,3 +42,5 @@ setw -g mode-mouse on
 
 # Run scripts
 bind-key C-e source-file "$HOME/.tmux/split-edit.tmux"
+bind-key C-s source-file "$HOME/.tmux/split-test-small.tmux"
+bind-key C-w source-file "$HOME/.tmux/split-test-wide.tmux"
