--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,8 @@ set -g renumber-windows on
 set -g history-limit 10000
 
 # Powerline
-source "$HOME/.vim/bundle/powerline/powerline/bindings/tmux/powerline.conf"
+#source "$HOME/.vim/bundle/powerline/powerline/bindings/tmux/powerline.conf"
+source "$HOME/.tmux/tmuxline.conf"
 
 # Enable mouse
 set -g mouse-resize-pane on
