--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,29 +1,29 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Mi, 04 Dez 2013
+# on Do, 05 Dez 2013
 
-set -g status-bg 'colour236'
-set -g message-command-fg 'colour239'
-set -g status-justify 'left'
+set -g status-bg 'colour235'
+set -g message-command-fg 'colour245'
+set -g status-justify 'centre'
 set -g status-left-length '100'
 set -g status 'on'
-set -g pane-active-border-fg 'colour250'
-set -g message-bg 'colour250'
+set -g pane-active-border-fg 'colour245'
+set -g message-bg 'colour235'
 set -g status-right-length '100'
 set -g status-right-attr 'none'
-set -g message-fg 'colour239'
-set -g message-command-bg 'colour250'
+set -g message-fg 'colour245'
+set -g message-command-bg 'colour235'
 set -g status-attr 'none'
 set -g status-utf8 'on'
-set -g pane-border-fg 'colour250'
+set -g pane-border-fg 'colour235'
 set -g status-left-attr 'none'
-setw -g window-status-fg 'colour250'
+setw -g window-status-fg 'colour238'
 setw -g window-status-attr 'none'
-setw -g window-status-activity-bg 'colour236'
+setw -g window-status-activity-bg 'colour235'
 setw -g window-status-activity-attr 'none'
-setw -g window-status-activity-fg 'colour250'
+setw -g window-status-activity-fg 'colour245'
 setw -g window-status-separator ''
-setw -g window-status-bg 'colour236'
-set -g status-left '#[fg=colour9,bg=colour250,bold] #S #[fg=colour250,bg=colour236,nobold,nounderscore,noitalics]⮀'
-set -g status-right '#[fg=colour250,bg=colour236,nobold,nounderscore,noitalics]⮂#[fg=colour239,bg=colour250] %Y-%m-%d ⮃ %H:%M #[fg=colour250,bg=colour250,nobold,nounderscore,noitalics]⮂#[fg=colour9,bg=colour250] #h '
-setw -g window-status-format '#[fg=colour250,bg=colour236] #I ⮁#[fg=colour250,bg=colour236] #W '
-setw -g window-status-current-format '#[fg=colour236,bg=colour250,nobold,nounderscore,noitalics]⮀#[fg=colour239,bg=colour250] #I ⮁#[fg=colour239,bg=colour250] #W #[fg=colour250,bg=colour236,nobold,nounderscore,noitalics]⮀'
+setw -g window-status-bg 'colour235'
+set -g status-left '#[fg=colour235,bg=colour245,bold] #S #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]⮀#[fg=colour245,bg=colour235] #F #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀#[fg=colour238,bg=colour235] #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮂#[fg=colour238,bg=colour235] %a #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮂#[fg=colour245,bg=colour235] %b %d ⮃ %R #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]⮂#[fg=colour235,bg=colour245] #H '
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀#[default] #I ⮁ #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀'
+setw -g window-status-current-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀#[fg=colour245,bg=colour235] #I ⮁ #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀'
