--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule ".vim/bundle/json"]
 	path = .vim/bundle/json
 	url = https://github.com/elzr/vim-json.git
+[submodule ".vim/bundle/tern"]
+	path = .vim/bundle/tern
+	url = https://github.com/marijnh/tern_for_vim.git
