--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,5 +1,5 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Do, 05 Dez 2013
+# on Tue, 17 Dec 2013
 
 set -g status-bg 'colour235'
 set -g message-command-fg 'colour245'
@@ -23,7 +23,7 @@ setw -g window-status-activity-attr 'none'
 setw -g window-status-activity-fg 'colour245'
 setw -g window-status-separator ''
 setw -g window-status-bg 'colour235'
-set -g status-left '#[fg=colour235,bg=colour245,bold] #S #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]⮀#[fg=colour245,bg=colour235] #F #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀#[fg=colour238,bg=colour235] #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀'
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮂#[fg=colour238,bg=colour235] %a #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮂#[fg=colour245,bg=colour235] %b %d ⮃ %R #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]⮂#[fg=colour235,bg=colour245] #H '
-setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀#[default] #I ⮁ #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀'
-setw -g window-status-current-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀#[fg=colour245,bg=colour235] #I ⮁ #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]⮀'
+set -g status-left '#[fg=colour235,bg=colour245,bold] #S #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] #F #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour235] #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour235] %a #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] %b %d  %R #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour245] #H '
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
