--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
