--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,9 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # Splits
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Start with 1
 set -g base-index 1
