--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,29 +1,29 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Tue, 17 Dec 2013
+# on Sa, 18 Apr 2015
 
-set -g status-bg 'colour235'
-set -g message-command-fg 'colour245'
-set -g status-justify 'centre'
-set -g status-left-length '100'
-set -g status 'on'
-set -g pane-active-border-fg 'colour245'
-set -g message-bg 'colour235'
-set -g status-right-length '100'
-set -g status-right-attr 'none'
-set -g message-fg 'colour245'
-set -g message-command-bg 'colour235'
-set -g status-attr 'none'
-set -g status-utf8 'on'
-set -g pane-border-fg 'colour235'
-set -g status-left-attr 'none'
-setw -g window-status-fg 'colour238'
-setw -g window-status-attr 'none'
-setw -g window-status-activity-bg 'colour235'
-setw -g window-status-activity-attr 'none'
-setw -g window-status-activity-fg 'colour245'
-setw -g window-status-separator ''
-setw -g window-status-bg 'colour235'
-set -g status-left '#[fg=colour235,bg=colour245,bold] #S #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] #F #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour235] #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour235] %a #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] %b %d  %R #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour245] #H '
-setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-bg "colour235"
+set -g message-command-fg "colour245"
+set -g status-justify "centre"
+set -g status-left-length "100"
+set -g status "on"
+set -g pane-active-border-fg "colour245"
+set -g message-bg "colour235"
+set -g status-right-length "100"
+set -g status-right-attr "none"
+set -g message-fg "colour245"
+set -g message-command-bg "colour235"
+set -g status-attr "none"
+set -g status-utf8 "on"
+set -g pane-border-fg "colour235"
+set -g status-left-attr "none"
+setw -g window-status-fg "colour238"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour235"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour245"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour235"
+set -g status-left "#[fg=colour235,bg=colour245,bold] #H #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour235] %d. %b #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour245] %R "
+setw -g window-status-format "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] #I #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]"
