--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,5 +1,5 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sa, 18 Apr 2015
+# on Mon, 20 Apr 2015
 
 set -g status-bg "colour235"
 set -g message-command-fg "colour245"
@@ -23,7 +23,7 @@ setw -g window-status-activity-attr "none"
 setw -g window-status-activity-fg "colour245"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour235"
-set -g status-left "#[fg=colour235,bg=colour245,bold] #H #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=colour235,bg=colour245,bold] #(hostname -s) #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour235] %d. %b #[fg=colour245,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour245] %R "
 setw -g window-status-format "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour245,bg=colour235] #I #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]"
