--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,7 @@ set -g renumber-windows on
 set -g history-limit 10000
 
 # Enable mouse
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-set -g mouse-utf8 off
-setw -g mode-mouse on
+set-option -g mouse on
+# Start copy mode when scrolling up (see https://github.com/tmux/tmux/issues/145)
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
