Add new snipmate dependencies

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,9 @@
 [submodule ".vim/bundle/supertab"]
 	path = .vim/bundle/supertab
 	url = git@github.com:ervandew/supertab.git
+[submodule ".vim/bundle/tlib"]
+	path = .vim/bundle/tlib
+	url = git@github.com:tomtom/tlib_vim.git
+[submodule ".vim/bundle/addon-mw-utils"]
+	path = .vim/bundle/addon-mw-utils
+	url = git@github.com:MarcWeber/vim-addon-mw-utils.git
