--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule ".vim/bundle/hybrid"]
 	path = .vim/bundle/hybrid
 	url = git@github.com:w0ng/vim-hybrid.git
+[submodule ".vim/bundle/eunuch"]
+	path = .vim/bundle/eunuch
+	url = git@github.com:tpope/vim-eunuch.git
