Fix tab completion in shells

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ source "$HOME/.tmux/tmuxline.conf"
 unbind C-b
 set -g prefix C-q
 
+# Fix tab completion in shells
+unbind-key Tab
+
 # C-q C-q swaps to last used window
 bind-key C-q last-window
 
