Fix clipboard on macOS Sierra

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 set -g status on
 
 source "$HOME/.tmux/tmuxline.conf"
