--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule ".vim/bundle/addon-mw-utils"]
 	path = .vim/bundle/addon-mw-utils
 	url = git@github.com:MarcWeber/vim-addon-mw-utils.git
+[submodule ".vim/bundle/tlib"]
+	path = .vim/bundle/tlib
+	url = git@github.com:tomtom/tlib_vim.git
