--- a/.gitmodules
+++ b/.gitmodules
@@ -1,63 +1,63 @@
 [submodule ".vim/bundle/surround"]
 	path = .vim/bundle/surround
-	url = http://github.com/tpope/vim-surround.git
+	url = git@github.com:tpope/vim-surround.git
 [submodule ".vim/bundle/fugitive"]
 	path = .vim/bundle/fugitive
-	url = http://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
-	url = http://github.com/scrooloose/nerdtree.git
+	url = git@github.com:scrooloose/nerdtree.git
 [submodule ".vim/bundle/powerline"]
 	path = .vim/bundle/powerline
-	url = http://github.com/Lokaltog/powerline.git
+	url = git@github.com:Lokaltog/powerline.git
 [submodule ".vim/bundle/stylus"]
 	path = .vim/bundle/stylus
-	url = http://github.com/wavded/vim-stylus.git
+	url = git@github.com:wavded/vim-stylus.git
 [submodule ".vim/bundle/unimpaired"]
 	path = .vim/bundle/unimpaired
-	url = http://github.com/tpope/vim-unimpaired.git
+	url = git@github.com:tpope/vim-unimpaired.git
 [submodule ".vim/bundle/sensible"]
 	path = .vim/bundle/sensible
-	url = http://github.com/tpope/vim-sensible.git
+	url = git@github.com:tpope/vim-sensible.git
 [submodule ".vim/bundle/mustache"]
 	path = .vim/bundle/mustache
-	url = http://github.com/juvenn/mustache.vim.git
+	url = git@github.com:juvenn/mustache.vim.git
 [submodule ".vim/bundle/snipmate"]
 	path = .vim/bundle/snipmate
-	url = http://github.com/garbas/vim-snipmate.git
+	url = git@github.com:garbas/vim-snipmate.git
 [submodule ".vim/bundle/javascript"]
 	path = .vim/bundle/javascript
-	url = http://github.com/pangloss/vim-javascript.git
+	url = git@github.com:pangloss/vim-javascript.git
 [submodule ".vim/bundle/delimitMate"]
 	path = .vim/bundle/delimitMate
-	url = http://github.com/Raimondi/delimitMate.git
+	url = git@github.com:Raimondi/delimitMate.git
 [submodule ".vim/bundle/repeat"]
 	path = .vim/bundle/repeat
-	url = http://github.com/tpope/vim-repeat.git
+	url = git@github.com:tpope/vim-repeat.git
 [submodule ".vim/bundle/gitgutter"]
 	path = .vim/bundle/gitgutter
-	url = https://github.com/airblade/vim-gitgutter.git
+	url = git@github.com:airblade/vim-gitgutter.git
 [submodule ".vim/bundle/syntastic"]
 	path = .vim/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
+	url = git@github.com:scrooloose/syntastic.git
 [submodule ".vim/bundle/bufferline"]
 	path = .vim/bundle/bufferline
-	url = https://github.com/bling/vim-bufferline.git
+	url = git@github.com:bling/vim-bufferline.git
 [submodule ".vim/bundle/tmuxline"]
 	path = .vim/bundle/tmuxline
-	url = https://github.com/edkolev/tmuxline.vim.git
+	url = git@github.com:edkolev/tmuxline.vim.git
 [submodule ".vim/bundle/airline"]
 	path = .vim/bundle/airline
-	url = https://github.com/bling/vim-airline.git
+	url = git@github.com:bling/vim-airline.git
 [submodule ".vim/bundle/json"]
 	path = .vim/bundle/json
-	url = https://github.com/elzr/vim-json.git
+	url = git@github.com:elzr/vim-json.git
 [submodule ".vim/bundle/tern"]
 	path = .vim/bundle/tern
-	url = https://github.com/marijnh/tern_for_vim.git
+	url = git@github.com:marijnh/tern_for_vim.git
 [submodule ".vim/bundle/ctrlp"]
 	path = .vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
+	url = git@github.com:kien/ctrlp.vim.git
 [submodule ".vim/bundle/editorconfig"]
 	path = .vim/bundle/editorconfig
 	url = git@github.com:editorconfig/editorconfig-vim.git
