--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule ".vim/pack/mantoni/start/css3-syntax"]
 	path = .vim/pack/mantoni/start/css3-syntax
 	url = git@github.com:hail2u/vim-css3-syntax.git
+[submodule ".vim/pack/mantoni/start/jinja"]
+	path = .vim/pack/mantoni/start/jinja
+	url = git@github.com:lepture/vim-jinja.git
