--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,28 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Mo, 08 Feb 2016
+# on Do, 18 Jun 2020
 
-set -g status-bg "colour237"
-set -g message-command-fg "colour250"
 set -g status-justify "centre"
-set -g status-left-length "100"
 set -g status "on"
-set -g pane-active-border-fg "colour65"
-set -g message-bg "colour235"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour243,bg=colour234"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour243"
+set -g status-style "none,bg=colour234"
+set -g message-style "fg=colour243,bg=colour234"
+set -g pane-border-style "fg=colour234"
 set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g message-fg "colour250"
-set -g message-command-bg "colour235"
-set -g status-attr "none"
-set -g pane-border-fg "colour235"
-set -g status-left-attr "none"
-setw -g window-status-fg "colour250"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour237"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour65"
+set -g status-left-length "100"
+setw -g window-status-activity-style "underscore,fg=colour243,bg=colour234"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour237"
-set -g status-left "#[fg=colour193,bg=colour65] #(hostname -s) #[fg=colour65,bg=colour237,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour237] %d. %b #[fg=colour65,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour193,bg=colour65] %R "
-setw -g window-status-format "#[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour237,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour235] #I #W #[fg=colour235,bg=colour237,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=colour243,bg=colour234"
+set -g status-left "#[fg=colour234,bg=colour243,bold] #(hostname -s) #[fg=colour243,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour237,bg=colour234] %d. %b #[fg=colour243,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour234,bg=colour243] %R "
+setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour243,bg=colour234] #I #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
