--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,21 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Do, 18 Jun 2020
+# on Fr, 19 Jun 2020
 
 set -g status-justify "centre"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=colour243,bg=colour234"
+set -g message-command-style "fg=colour250,bg=colour237"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour243"
-set -g status-style "none,bg=colour234"
-set -g message-style "fg=colour243,bg=colour234"
-set -g pane-border-style "fg=colour234"
+set -g pane-active-border-style "fg=colour110"
+set -g status-style "none,bg=colour235"
+set -g message-style "fg=colour250,bg=colour237"
+set -g pane-border-style "fg=colour237"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "underscore,fg=colour243,bg=colour234"
+setw -g window-status-activity-style "none,fg=colour110,bg=colour235"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour243,bg=colour234"
-set -g status-left "#[fg=colour234,bg=colour243,bold] #(hostname -s) #[fg=colour243,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour237,bg=colour234] %d. %b #[fg=colour243,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour234,bg=colour243] %R "
-setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour243,bg=colour234] #I #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=colour250,bg=colour235"
+set -g status-left "#[fg=colour234,bg=colour110,bold] #(hostname -s) #[fg=colour110,bg=colour235,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour235] %d. %b #[fg=colour110,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour234,bg=colour110] %R "
+setw -g window-status-format "#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour235,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour237] #I #W #[fg=colour237,bg=colour235,nobold,nounderscore,noitalics]"
