--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,9 @@
 [submodule ".vim/pack/mantoni/start/prettier"]
 	path = .vim/pack/mantoni/start/prettier
 	url = git@github.com:prettier/vim-prettier.git
+[submodule ".vim/pack/mantoni/start/tsuquyomi"]
+	path = .vim/pack/mantoni/start/tsuquyomi
+	url = git@github.com:Quramy/tsuquyomi.git
+[submodule ".vim/pack/mantoni/start/typescript"]
+	path = .vim/pack/mantoni/start/typescript
+	url = git@github.com:leafgarland/typescript-vim.git
