--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule ".vim/pack/mantoni/start/graphql"]
 	path = .vim/pack/mantoni/start/graphql
 	url = git@github.com:jparise/vim-graphql.git
+[submodule ".vim/pack/mantoni/start/ack"]
+	path = .vim/pack/mantoni/start/ack
+	url = git@github.com:mileszs/ack.vim.git
