--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule ".vim/pack/mantoni/start/ack"]
 	path = .vim/pack/mantoni/start/ack
 	url = git@github.com:mileszs/ack.vim.git
+[submodule ".vim/pack/mantoni/opt/onedark"]
+	path = .vim/pack/mantoni/opt/onedark
+	url = git@github.com:joshdick/onedark.vim.git
