--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
 	editor = vim
 	autocrlf = input
 	excludesfile = ~/.gitignore_global
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [push]
 	default = upstream
 [alias]
@@ -19,17 +20,13 @@
 	ui = true
 [credential]
 	helper = cache --timeout 86400
-[pager]
-	log = diff-so-fancy | less
-	show = diff-so-fancy | less
-	diff = diff-so-fancy | less
 [color "diff-highlight"]
 	oldNormal = red
-	oldHighlight = red bold reverse
+	oldHighlight = red 52
 	newNormal = green
-	newHighlight = green bold reverse
+	newHighlight = green 22
 [color "diff"]
-	meta = magenta bold
+	meta = 11
 	frag = magenta
 	commit = yellow
 	old = red
