--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule ".vim/pack/mantoni/start/ale"]
 	path = .vim/pack/mantoni/start/ale
 	url = git@github.com:dense-analysis/ale.git
+[submodule ".vim/pack/mantoni/start/jsdoc"]
+	path = .vim/pack/mantoni/start/jsdoc
+	url = git@github.com:heavenshell/vim-jsdoc.git
