--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@ include ./theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Nerd Font
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Hack Nerd Font Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -25,7 +25,7 @@ font_family      Hack Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -169,7 +169,7 @@ font_size 13.0
 #: placed in the cell. For example::
 
 #:     modify_font cell_width 80%
-modify_font cell_height +12px
+modify_font cell_height +9px
 #:     modify_font baseline 3
 
 #: Note that modifying the baseline will automatically adjust the
