--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ include ./theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Nerd Font Mono
+font_family      Hack Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
