--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1413,7 +1413,7 @@ enable_audio_bell no
 #: to use the background color of the currently active window and
 #: finally you can use an arbitrary color, such as #12af59 or red.
 
-# macos_titlebar_color system
+macos_titlebar_color background
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
