--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule ".vim/pack/mantoni/opt/sonokai"]
 	path = .vim/pack/mantoni/opt/sonokai
 	url = git@github.com:sainnhe/sonokai.git
+[submodule ".vim/pack/mantoni/start/terraform"]
+	path = .vim/pack/mantoni/start/terraform
+	url = git@github.com:hashivim/vim-terraform.git
