Set custom titlebar color

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1414,7 +1414,7 @@ term xterm-kitty
 #: to use the background color of the currently active window and
 #: finally you can use an arbitrary color, such as #12af59 or red.
 
-macos_titlebar_color background
+macos_titlebar_color #33353f
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
