--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,3 +46,6 @@ set-option -g mouse on
 # Start copy mode when scrolling up (see https://github.com/tmux/tmux/issues/145)
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
