--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,7 @@ bind-key -r C-l select-window -t :+
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind o display-popup -d "#{pane_current_path}"
 
 # Start with 1
 set -g base-index 1
