--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,21 +1,49 @@
-background #222327
+# https://github.com/sainnhe/sonokai
+
+background #2c2e34
 foreground #e2e2e3
+
+selection_background #3b3e48
+selection_foreground #e2e2e3
+
+cursor #e2e2e3
+cursor_text_color background
+
+active_tab_background #2c2e34
+active_tab_foreground #e2e2e3
+active_tab_font_style bold
+inactive_tab_background #2c2e34
+inactive_tab_foreground #e2e2e3
+inactive_tab_font_style normal
+
+# Black
 color0 #181819
 color8 #7f8490
+
+# Red
 color1 #fc5d7c
 color9 #fc5d7c
+
+# Green
 color2 #9ed072
 color10 #9ed072
+
+# Yellow
 color3 #e7c664
 color11 #e7c664
+
+# Blue
 color4 #76cce0
 color12 #76cce0
+
+# Magenta
 color5 #b39df3
 color13 #b39df3
+
+# Cyan
 color6 #f39660
-color14 #f39660
+color7 #f39660
+
+# White
 color7 #e2e2e3
 color15 #e2e2e3
-# cursor #f83d19
-selection_background #595f6f
-selection_foreground #e2e2e3
