--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule ".vim/pack/mantoni/start/fern-hijack"]
 	path = .vim/pack/mantoni/start/fern-hijack
 	url = git@github.com:lambdalisue/fern-hijack.vim.git
+[submodule ".vim/pack/mantoni/start/js-pretty-template"]
+	path = .vim/pack/mantoni/start/js-pretty-template
+	url = git@github.com:Quramy/vim-js-pretty-template.git
