Add vim-js-pretty-template for sql highlighting

--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule ".vim/pack/mantoni/start/html-template-literals"]
 	path = .vim/pack/mantoni/start/html-template-literals
 	url = git@github.com:jonsmithers/vim-html-template-literals.git
+[submodule ".vim/pack/mantoni/start/vim-js-pretty-template"]
+	path = .vim/pack/mantoni/start/vim-js-pretty-template
+	url = git@github.com:Quramy/vim-js-pretty-template.git
