--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,7 +27,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12
+font_size 13
 
 #: Font size (in pts)
 
@@ -1470,7 +1470,7 @@ macos_quit_when_last_window_closed yes
 #: will only affect newly created OS windows.
 
 # macos_thicken_font 0.5
-# text_composition_strategy 1.0 0
+# text_composition_strategy legacy
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes on macOS. For example, a
