--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,10 @@ source "$HOME/.tmux/tmuxline.conf"
 
 # GNU screen style
 unbind C-b
-set -g prefix C-q
+set -g prefix C-space
 
-# C-q C-q swaps to last used window
-bind-key C-q last-window
+# 2x C-space swaps to last used window
+bind-key C-space last-window
 
 # Faster command sequences (fixes VIM esc)
 set -s escape-time 0
